# metagen

./: .eleventy.js  .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  claude.project.assessment.md  crosswalk.py  hugo.toml  ideas.md  long.term.metadata.md  package-lock.json  package.json  pyproject.toml  quesitons.md  tasks.md  test.gap.report.md
.github/workflows/: deploy.yml
data/usfs/: EDW_ActivityFactsCommonAttributes_01.xml  EDW_ActivityFactsCommonAttributes_01_dcat_us.json
docs/: _index.md  index.md
docs/_includes/: base.njk
docs/claude/: qa-log.md
docs/notes/: 2026-02-18-20-46-55.md  _index.md
docs/qa/: _index.md
docs/reports/: _index.md  gap_report_2026-02-12_211401.md  gap_report_2026-02-18_233616.md  gap_report_2026-02-18_233645.md  gap_report_2026-02-18_233748.md  index.md
notes/: 11ty.setup.md  11ty.templates.md
src/metagen/: __init__.py
src/metagen/cli/: main.py
src/metagen/llm/: bots.py  gap_filler.py
src/metagen/metadata/: dcat_us.py
src/metagen/readers/: rest.py  wsdl.py
src/metagen/reports/: gap.py
